--- a/guido.tex
+++ b/guido.tex
@@ -151,8 +151,9 @@ Mijn motivatie om deel uit te maken van het bestuur komt voort uit mijn wens om 
 
 In mijn academische en persoonlijke ervaringen heb ik vaardigheden opgedaan die ik in deze functie goed kan inzetten. Bijvoorbeeld:
 
-[Benoem een relevante ervaring, zoals een project waarin je met financiën werkte of een rol waarin je verantwoordelijkheid droeg.]
-[Vermeld een eigenschap, zoals je vermogen om met deadlines om te gaan of je communicatieve vaardigheden.]
+Ik heb jaren ervaring met het beheren van de financiën in een kleine startup in de productie van synthetische harddrugs. Hierbij was ik verantwoordelijk voor het opstellen van budgetten, het bijhouden van de administratie en het maken van financiële rapportages. Ook heb ik hier geleerd dat je soms creatief moet zijn met de boekhouding om de geldstromen te verbergen voor de belastingdienst. Dit zou erg handig kunnen zijn om de NSA te helpen met het verbergen van de geldstromen afkomstig van de ondergrondse Salmari handel.
+Wat betreft de consumptie van verdovende middelen op (E/A)JW: hier ben ik zeer geschikt voor. Ik heb jaren ervaring met het consumeren van verdovende middelen en kan hierdoor goed inschatten hoeveel er nodig is voor een evenement. Zo is bijvoorbeeld 6 lachouffe per persoon per uur een goede richtlijn voor een kabouterborrel.
+
 Ik ben ervan overtuigd dat ik met mijn enthousiasme, toewijding en analytische vaardigheden een waardevolle bijdrage kan leveren aan het bestuur. Ik kijk ernaar uit om samen met mijn medebestuursleden onze vereniging verder te versterken en onze doelen te realiseren.
 
 Graag licht ik mijn motivatie en ideeën voor de rol van penningmeester verder toe in een gesprek. Bij voorbaat dank voor de tijd en moeite die u neemt om mijn sollicitatie in overweging te nemen.
